--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "dependencies": {
     "express":"^4.15.4",
     "body-parser":"^1.17.2",
-    "mongoose": "^4.11.7"
+    "mongoose": "^4.11.7",
+    "slug":"^0.9.1",
+    "md5":"^2.2.1",
+    "validator":"^8.0.0",
+    "mongoose-mongodb-errors":"^0.0.2",
+    "passport-local-mongoose":"^4.1.0"
   }
 }
