--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -19,13 +19,16 @@
   },
   "homepage": "https://github.com/benjaminhuanghuang/mongoose-study#readme",
   "dependencies": {
-    "express":"^4.15.4",
-    "body-parser":"^1.17.2",
+    "express": "^4.15.4",
+    "body-parser": "^1.17.2",
     "mongoose": "^4.11.7",
-    "slug":"^0.9.1",
-    "md5":"^2.2.1",
-    "validator":"^8.0.0",
-    "mongoose-mongodb-errors":"^0.0.2",
-    "passport-local-mongoose":"^4.1.0"
+    "slug": "^0.9.1",
+    "md5": "^2.2.1",
+    "validator": "^8.0.0",
+    "mongoose-mongodb-errors": "^0.0.2",
+    "passport-local-mongoose": "^4.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.5.0"
   }
 }
